--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "devops-version-status",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Show version and status",
   "main": "index.js",
   "scripts": {
@@ -23,5 +23,14 @@
   "devDependencies": {
     "chai": "^3.4.1",
     "mocha": "^2.4.1"
+  },
+  "homepage": "https://github.com/brybwy/devops-version-status#readme",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "chai": "^3.4.1",
+    "rootpath": "^0.1.2",
+    "path": "^0.12.7"
   }
 }
